--- a/ContactBook/ContactBook.Maui/AppShell.xaml
+++ b/ContactBook/ContactBook.Maui/AppShell.xaml
@@ -4,12 +4,13 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:ContactBook.Maui"
+    xmlns:views="clr-namespace:ContactBook.Maui.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="ContactBook.Maui">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate views:ContactsPage}"
+        Route="ContactsPage" />
 
 </Shell>
