--- a/ContactBook/ContactBook.Maui/Views/ContactsPage.xaml
+++ b/ContactBook/ContactBook.Maui/Views/ContactsPage.xaml
@@ -2,11 +2,56 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ContactBook.Maui.Views.ContactsPage"
-             Title="ContactsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="Contacts">
+
+    <Grid 
+        Padding="5"
+        RowDefinitions="50, *, 50"
+        ColumnDefinitions="*">
+        <SearchBar
+            x:Name="SearchBar"
+            Grid.Row="0"
+            Grid.Column="0"
+            Placeholder="Поиск контактов"
+            TextChanged="SearchBar_TextChanged"></SearchBar>
+        <ListView 
+            Grid.Row="1"
+            Grid.Column="0"
+        x:Name="listContacts"  
+        Background="Transparent"
+        SeparatorColor="Silver"
+        RowHeight="70"
+        ItemSelected="listContacts_ItemSelected"
+        ItemTapped="listContacts_ItemTapped">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <TextCell 
+                        Text="{Binding Name}"
+                        Detail="{Binding Email}">
+                        <TextCell.ContextActions>
+                            <MenuItem 
+                                Text="Удалить" 
+                                IsDestructive="True"
+                                Clicked="Delete_Clicked"
+                                CommandParameter="{Binding .}"></MenuItem>
+                        </TextCell.ContextActions>
+                    </TextCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+
+
+        </ListView>
+
+        <Button 
+            Grid.Row="2"
+            Grid.Column="0"
+            x:Name="btnAdd" 
+            Text="Добавить контакт"
+            Clicked="btnAdd_Clicked"></Button>
+    </Grid>
+    
+
+
+
+
 </ContentPage>
