--- a/ContactBook/ContactBook.Maui/AppShell.xaml
+++ b/ContactBook/ContactBook.Maui/AppShell.xaml
@@ -3,9 +3,8 @@
     x:Class="ContactBook.Maui.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:ContactBook.Maui"
     xmlns:views="clr-namespace:ContactBook.Maui.Views"
-    Shell.FlyoutBehavior="Disabled"
+    FlyoutBehavior="Disabled"
     Title="ContactBook.Maui">
 
     <ShellContent
