--- a/ContactBook/ContactBook.Maui/Views/Controls/ContactControl.xaml
+++ b/ContactBook/ContactBook.Maui/Views/Controls/ContactControl.xaml
@@ -2,25 +2,21 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:vm="clr-namespace:ContactBook.Maui.ViewModels"
+             x:DataType="vm:ContactViewModel"
              x:Class="ContactBook.Maui.Views.Controls.ContactControl">
 
     <VerticalStackLayout Spacing="10" Margin="20, 20, 20, 0">
-
-        <Label   
-            x:Name="lblName"
-            Text="Изменить контакт"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-
         <Frame Padding="10, 2, 10, 2">
             <HorizontalStackLayout>
                 <Label Text="Имя" VerticalOptions="Center" WidthRequest="60"></Label>
-                <Entry x:Name="entryName" VerticalOptions="Center">
+                <Entry Text="{Binding Contact.Name}" VerticalOptions="Center">
                     <Entry.Behaviors>
                         <toolkit:TextValidationBehavior
                             x:Name="nameValidator"
                             Flags="ValidateOnAttaching,ValidateOnValueChanged"
                             MinimumLength="1"
+                            IsValid="{Binding IsNameProvided}"
                             />
                     </Entry.Behaviors>
                 </Entry>
@@ -31,18 +27,19 @@
         <Frame Padding="10, 2, 10, 2">
             <HorizontalStackLayout>
                 <Label Text="Почта" VerticalOptions="Center" WidthRequest="60"></Label>
-                <Entry x:Name="entryEmail" VerticalOptions="Center">
+                <Entry Text="{Binding Contact.Email}"  VerticalOptions="Center">
                     <Entry.Behaviors>
                         <toolkit:MultiValidationBehavior
-                            x:Name="emailValidator"
                             Flags="ValidateOnAttaching,ValidateOnValueChanged">
                             <toolkit:TextValidationBehavior
                                 Flags="ValidateOnAttaching,ValidateOnValueChanged"
                                 MinimumLength="1" 
-                                toolkit:MultiValidationBehavior.Error="Почта должна быть заполнена"/>
+                                toolkit:MultiValidationBehavior.Error="Почта должна быть заполнена"
+                                IsValid="{Binding IsEmailProvided}"/>
                             <toolkit:EmailValidationBehavior 
                                 Flags="ValidateOnAttaching,ValidateOnValueChanged"
-                                toolkit:MultiValidationBehavior.Error="Форма почты не валидна"/>
+                                toolkit:MultiValidationBehavior.Error="Форма почты не валидна"
+                                IsValid="{Binding IsEmailFormatCorrect}"/>
                         </toolkit:MultiValidationBehavior>
                     </Entry.Behaviors>
                 </Entry>
@@ -52,19 +49,19 @@
         <Frame Padding="10, 2, 10, 2">
             <HorizontalStackLayout>
                 <Label Text="Телефон" VerticalOptions="Center" WidthRequest="60"></Label>
-                <Entry x:Name="entryPhone" VerticalOptions="Center"></Entry>
+                <Entry Text="{Binding Contact.Phone}"  VerticalOptions="Center"></Entry>
             </HorizontalStackLayout>
         </Frame>
 
         <Frame Padding="10, 2, 10, 2">
             <HorizontalStackLayout>
                 <Label Text="Адрес" VerticalOptions="Center" WidthRequest="60"></Label>
-                <Entry x:Name="entryAddress" VerticalOptions="Center"></Entry>
+                <Entry Text="{Binding Contact.Address}" VerticalOptions="Center"></Entry>
             </HorizontalStackLayout>
         </Frame>
 
-        <Button x:Name="btnSave" Text="Сохранить" Clicked="btnSave_Clicked"></Button>
-        <Button x:Name="btnCancel" Text="Отменить" Clicked="btnCancel_Clicked"></Button>
+        <Button x:Name="btnSave" Text="Сохранить"></Button>
+        <Button Text="Отменить" Command="{Binding BackToContactsCommand}"></Button>
     </VerticalStackLayout>
 
 </ContentView>
